# mlb-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: __init__.py  config.py  database.py  main.py  utils.py
app/models/: __init__.py  analysis.py  cache.py  game.py  player.py  standings.py
app/routers/: __init__.py  analysis.py  games.py  matchups.py  players.py  standings.py  teams.py
app/services/: __init__.py  ai_service.py  cache_service.py  memory_cache.py  mlb_client.py  sabermetrics.py
app/services/mlb_client/: __init__.py  base.py  content.py  games.py  players.py  schedule.py  standings.py  teams.py
tests/: __init__.py  conftest.py  test_api.py  test_memory_cache.py  test_sabermetrics.py  test_utils.py
